--- a/components/base.css
+++ b/components/base.css
@@ -50,6 +50,6 @@ table {
 }
 
 html {
-  font-family: 'Alegreya Sans SC', sans-serif;
-  background-color: #5f27cd;
+  font-family: 'Crete Round', serif;
+  background-color: #ffbe76;
 }
