--- a/components/checklist.css
+++ b/components/checklist.css
@@ -18,8 +18,8 @@
   display: inline-flex;
   width: 40px;
   height: 40px;
-  background: #fafafa;
-  border: 2px solid #ff9ff3;
+  background-color: #f6e58d;
+  border: 2px solid #f0932b;
   border-radius: 10px;
 }
 
@@ -28,8 +28,8 @@
   position: absolute;
   height: 5px;
   width: 10px;
-  border-left: 2px solid #ff9ff3;
-  border-bottom: 2px solid #ff9ff3;
+  border-left: 2px solid #f0932b;
+  border-bottom: 2px solid #f0932b;
   top: 45%;
   left: 50%;
   transform: translate(-50%, -50%) rotate(-45deg);
@@ -39,11 +39,12 @@
   margin: 10px;
   padding: 10px;
   width: 500px;
-  font-family: 'Alegreya Sans SC', sans-serif;
+  font-family: 'Crete Round', serif;
   font-size: 22px;
-  color: #6c5ce7;
+  color: #f0932b;
+  background-color: #f6e58d;
   box-sizing: border-box;
-  border: 2px solid #ff9ff3;
+  border: 2px solid #f0932b;
   border-radius: 15px;
   position: relative;
   outline: none;
