--- a/components/checklist.css
+++ b/components/checklist.css
@@ -16,11 +16,12 @@
 
 .checklist__custom .checklist__checkmark {
   display: inline-flex;
-  width: 40px;
-  height: 40px;
+  width: 24px;
+  height: 24px;
   background-color: #f6e58d;
   border: 2px solid #f0932b;
-  border-radius: 10px;
+  border-radius: 6px;
+  margin-right: 2px;
 }
 
 .checklist__custom input:checked + .checklist__checkmark:after {
@@ -36,18 +37,32 @@
 }
 
 .checklist__to-do-item{
-  margin: 10px;
-  padding: 10px;
-  width: 500px;
+  margin: 2px;
+  padding: 2px;
+  width: 235px;
   font-family: 'Crete Round', serif;
-  font-size: 22px;
+  font-size: 18px;
   color: #f0932b;
   background-color: #f6e58d;
   box-sizing: border-box;
   border: 2px solid #f0932b;
-  border-radius: 15px;
+  border-radius: 8px;
   position: relative;
   outline: none;
 }
+@media (min-width: 600px) {
+.checklist__custom .checklist__checkmark {
+  width: 40px;
+  height: 40px;
+  border-radius: 10px;
+  margin-right: 0px;
+}
 
-
+.checklist__to-do-item{
+  margin: 10px;
+  padding: 10px;
+  width: 500px;
+  font-size: 22px;
+  border-radius: 15px;
+}
+}
