--- a/components/checklist.css
+++ b/components/checklist.css
@@ -3,6 +3,9 @@
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
+  width: auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .checklist__custom input {
