--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import 'components/base.css';
 @import 'components/checklist.css';
 @import 'components/text.css';
-@import 'components/button.css';
-@import 'components/mediaqueries.css';
+@import 'components/reset.css';
+
 
