--- a/style.css
+++ b/style.css
@@ -2,5 +2,6 @@
 @import 'components/checklist.css';
 @import 'components/text.css';
 @import 'components/reset.css';
+@import 'components/dialogbox.css';
 
 
